--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   "dependencies": {
     "next": "10.2.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.32.13"
+  },
+  "devDependencies": {
+    "@ijsto/eslint-config": "^4.1.6",
+    "eslint": "^7.26.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
