--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": ["@ijsto", "plugin:react-hooks/recommended"],
   "rules": {
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "prettier/prettier": "off",
+    "sort-keys": "off"
   }
 }
