--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.32.13"
   },
   "devDependencies": {
