--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "classnames": "^2.2.6",
@@ -19,7 +21,9 @@
   },
   "devDependencies": {
     "@ijsto/eslint-config": "^4.1.6",
+    "cypress": "^7.3.0",
     "eslint": "^7.26.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
